Change pkg folder name

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ include_package_data = True
 install_requires = 
     numpy == 1.25.2
     matplotlib == 3.7.2
-    opency-python == 4.8.0.76
+    opencv-python == 4.8.0.76
     pandas == 2.0.3
     pdf2image == 1.16.3
     pip == 23.2.1
