--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ include_package_data = True
 install_requires = 
     numpy == 1.25.2
     opencv-python == 4.8.0.76
+    imutils == 0.5.4
     pandas == 2.0.3
     pdf2image == 1.16.3
     pip == 23.2.1
